--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,8 +1,25 @@
-version: 1
+version: 2
 build:
-  os: Windows-10
+  os: ubuntu-22.04
   tools:
     python: "3.10"
 
 sphinx:
   configuration: docs/conf.py
+
+python:
+  install:
+    - requirements: docs/requirements.txt
+    - method: pip
+      path: .
+      extra_requirements:
+        - docs
+    - method: pip
+      path: another/package
+
+# Optional but recommended, declare the Python requirements required
+# to build your documentation
+# See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
+# python:
+#   install:
+#     - requirements: docs/requirements.txt
