try 5 at the yaml config

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -3,6 +3,9 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.10"
+  jobs:
+    pre_install:
+      - apt install libmariadb3 libmariadb-dev
 
 sphinx:
   configuration: docs/conf.py
